about added and all files structured